// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`provides raw tree data 1`] = `
{
  "tree": {
    "children": {
      "WingLogger": {
        "attributes": {
          "wing:resource:connections": [
            {
              "direction": "inbound",
              "implicit": true,
              "relationship": "print",
              "resource": "root/test",
            },
          ],
          "wing:resource:stateful": true,
        },
        "constructInfo": {
          "fqn": "constructs.Construct",
          "version": "10.1.245",
        },
        "display": {
          "description": "A cloud logging facility",
          "hidden": true,
          "title": "Logger",
        },
        "id": "WingLogger",
        "path": "root/WingLogger",
      },
      "test": {
        "attributes": {
          "wing:resource:connections": [
            {
              "direction": "outbound",
              "implicit": true,
              "relationship": "print",
              "resource": "root/WingLogger",
            },
          ],
          "wing:resource:stateful": false,
        },
        "children": {
          "Code": {
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Code",
            "path": "root/test/Code",
          },
        },
        "constructInfo": {
          "fqn": "constructs.Construct",
          "version": "10.1.245",
        },
        "display": {
          "description": "A cloud function (FaaS)",
          "title": "Function",
        },
        "id": "test",
        "path": "root/test",
      },
      "test.handler": {
        "attributes": {
          "wing:resource:connections": [],
          "wing:resource:stateful": false,
        },
        "constructInfo": {
          "fqn": "constructs.Construct",
          "version": "10.1.245",
        },
        "display": {
          "description": "An inflight resource",
          "hidden": true,
          "title": "Inflight",
        },
        "id": "test.handler",
        "path": "root/test.handler",
      },
    },
    "constructInfo": {
      "fqn": "constructs.Construct",
      "version": "10.1.245",
    },
    "id": "root",
    "path": "root",
  },
  "version": "tree-0.1",
}
`;

exports[`run all tests > single test 1`] = `
[
  {
    "error": undefined,
    "pass": true,
    "path": "root/test",
    "traces": [
      {
        "data": {
          "message": "wingsdk.cloud.Logger created.",
        },
        "sourcePath": "root/WingLogger",
        "sourceType": "wingsdk.cloud.Logger",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      {
        "data": {
          "message": "wingsdk.cloud.Function created.",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      {
        "data": {
          "message": "hi",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "log",
      },
      {
        "data": {
          "message": "Invoke (payload=\\"\\"\\"\\").",
          "result": undefined,
          "status": "success",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      {
        "data": {
          "message": "wingsdk.cloud.Function deleted.",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      {
        "data": {
          "message": "wingsdk.cloud.Logger deleted.",
        },
        "sourcePath": "root/WingLogger",
        "sourceType": "wingsdk.cloud.Logger",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
    ],
  },
]
`;

exports[`run single test > happy path 1`] = `
{
  "error": undefined,
  "pass": true,
  "path": "root/test",
  "traces": [
    {
      "data": {
        "message": "wingsdk.cloud.Logger created.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    {
      "data": {
        "message": "wingsdk.cloud.Function created.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    {
      "data": {
        "message": "hi",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "log",
    },
    {
      "data": {
        "message": "Invoke (payload=\\"\\"\\"\\").",
        "result": undefined,
        "status": "success",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    {
      "data": {
        "message": "wingsdk.cloud.Function deleted.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    {
      "data": {
        "message": "wingsdk.cloud.Logger deleted.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
  ],
}
`;

exports[`run single test > test failure 1`] = `
{
  "error": "Error: test failed
    at Handler.handle 
    at Object.exports.handler 
    at evalmachine.<anonymous>:27:9
    at Script.runInContext 
    at Proxy.runInContext 
    at Object.activity 
    at Object.withTrace 
    at Function.invoke 
    at Simulator.runTest ",
  "pass": false,
  "path": "root/test",
  "traces": [
    {
      "data": {
        "message": "wingsdk.cloud.Logger created.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    {
      "data": {
        "message": "wingsdk.cloud.Function created.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    {
      "data": {
        "message": "I am about to fail",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "log",
    },
    {
      "data": {
        "error": [Error: test failed],
        "message": "Invoke (payload=\\"\\"\\"\\").",
        "status": "failure",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    {
      "data": {
        "message": "wingsdk.cloud.Function deleted.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    {
      "data": {
        "message": "wingsdk.cloud.Logger deleted.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
  ],
}
`;
